--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,10 @@ license = "MIT"
 
 [tool.poetry.dependencies]
 python = "^3.7"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
+pytest = "^6.0.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
