--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.7"
 click = "^7.1.2"
+segyio = "^1.9.1"
+numpy = "^1.19.1"
+pandas = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.1"
