dont exit on decimate error

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@
 /decimate-0.4.0/
 /segdpy/
 /decimated_files/
+/error-log.txt
+/grane-files.txt
+/sensors.txt
+/snorre-results.txt
+/decimate
+/decimated_files.tar.gz
+/requested-times.txt
