restructure and cleanup

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,4 +8,4 @@ services:
       - .:/data
 #       Update this line with your raw data location
 #      - ./test_data/:/raw
-      - /project:/raw
+      - /project/grane-passive:/raw
