--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,8 @@
+.env
 /.venv/
 /.idea/
 /sqlite.db
 *__pycache__*
-/result.txt
-/papers/
-/test_data-result.txt
-/test_data/segd-test.sgd
-/test_data/
-/decimate-0.4.0/
-/segdpy/
-/decimated_files*
-/error-log.txt
-/grane-files.txt
-/sensors-grane.csv
-/snorre-results.txt
-/decimate
-/decimated_files.tar.gz
-/requested-times.csv
-/binary
-/header
-/seis_ee/segdpy/
 *sqlite.db
 /data/
 /ssh/
