--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ segyio = "^1.9.1"
 numpy = "^1.19.1"
 pandas = "^1.1.1"
 inotify = "^0.2.10"
+segdpy = {git = "ssh://git@github.com/equinor/segdpy.git"}
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.1"
