--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -2,6 +2,8 @@ version: "3.4"
 
 services:
   seis_ee:
+    environment:
+      environment: dev
     depends_on:
       - storage-emulator
   storage-emulator:
@@ -9,5 +11,6 @@ services:
     volumes:
       - "./data/storageBlobs:/data"
     ports:
-      - "10000:10000" # Blobs
-    command: ["azurite","--blobHost", "0.0.0.0", "--loose", "--location", "/data"]
+      - "10000:10000"
+      - "10001:10001"
+    command: ["azurite","--blobHost", "0.0.0.0", "--queueHost", "0.0.0.0", "--loose", "--location", "/data"]
