--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
       - "80:5000"
     environment:
       BLOB_CONN_STRING: DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://storage-emulator:10000/devstoreaccount1;
-      FILES_CONN_STRING: ${FILES_CONN_STRING}
+      STORAGE_CONN_STRING: ${STORAGE_CONN_STRING}
     volumes:
       - ./data:/app/data
     command: python3 /app/event_listener.py
