--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ fastapi = "^0.63.0"
 uvicorn = "^0.13.3"
 azure-storage-blob = "^12.7.1"
 azure-storage-file-share = "^12.4.1"
+azure-storage-queue = "^12.1.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^6.0.1"
