--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Stig Ofstad <stigofstad@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.6.1"
 click = "^7.1.2"
 segyio = "^1.9.1"
 numpy = "^1.19.1"
@@ -21,7 +21,19 @@ azure-storage-queue = "^12.1.5"
 pytest = "^6.0.1"
 python-dotenv = "^0.15.0"
 behave = "^1.2.6"
+pre-commit = "^2.10.1"
+black = {version = "^20.8b1", allow-prereleases = true}
+
+[tool.black]
+line-length = 119
+target-version = ['py38']
+exclude = '''
+/(
+    \.git
+  | \.venv
+)/
+'''
 
 [build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
