--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ python-dotenv = "^0.15.0"
 behave = "^1.2.6"
 pre-commit = "^2.10.1"
 black = {version = "^20.8b1", allow-prereleases = true}
+flake8 = "^3.8.4"
 
 [tool.black]
 line-length = 119
