--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,8 +12,8 @@ jobs:
       - name: Docker login
         run: echo ${{ secrets.GH_REGISTRY }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
       - name: Pull latest
-        run: docker pull ghcr.io/equinor/css-passive
+        run: docker pull ghcr.io/equinor/ccs-passive
       - name: Build
-        run: docker build . --tag ghcr.io/equinor/css-passive --cache-from ghcr.io/equinor/css-passive
+        run: docker build . --tag ghcr.io/equinor/ccs-passive --cache-from ghcr.io/equinor/ccs-passive
       - name: Push
-        run: docker push ghcr.io/equinor/css-passive
+        run: docker push ghcr.io/equinor/ccs-passive
