--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,30 +1,38 @@
 version: "3.4"
 services:
-  decimate:
-    image: ghcr.io/equinor/css-passive
+  decimator:
+    image: ghcr.io/equinor/ccs-passive
     build: .
     ports:
       - "80:5000"
     environment:
       FILES_CONN_STRING: ${FILES_CONN_STRING}
+      BLOB_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://storage-emulator:10000/devstoreaccount1;"
+      QUEUE_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;QueueEndpoint=http://storage-emulator:10001/devstoreaccount1;"
       RUN_MODE: decimator
     volumes:
       - ./data:/app/data
-
-  streamer:
-    image: ghcr.io/equinor/css-passive
-    build: .
-    environment:
-      FILES_CONN_STRING: ${FILES_CONN_STRING}
-      RUN_MODE: streamer
-    volumes:
-      - ./data:/app/data
+    depends_on:
+      - storage-emulator
 
   converter:
-    image: ghcr.io/equinor/css-passive
+    image: ghcr.io/equinor/ccs-passive
     build: .
     environment:
       FILES_CONN_STRING: ${FILES_CONN_STRING}
+      QUEUE_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;QueueEndpoint=http://storage-emulator:10001/devstoreaccount1;"
       RUN_MODE: converter
     volumes:
       - ./data:/app/data
+    depends_on:
+      - storage-emulator
+
+
+  storage-emulator:
+    image: mcr.microsoft.com/azure-storage/azurite
+    volumes:
+      - "./data/storageBlobs:/data"
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+    command: ["azurite","--blobHost", "0.0.0.0", "--queueHost", "0.0.0.0", "--loose", "--location", "/data"]
