--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,7 +10,7 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Docker login
-        run: echo ${{ secrets.GH_REGISTRY }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
+        run: echo ${{ secrets.PRIVATE_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
       - name: Pull latest
         run: docker pull ghcr.io/equinor/ccs-passive
       - name: Build
