--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -1,6 +1,6 @@
 version: "3.4"
 
-#services:
+services:
 #  seis_ee:
 #    environment:
 #      environment: dev
@@ -10,11 +10,11 @@ version: "3.4"
 #    depends_on:
 #      - storage-emulator
 
-#  storage-emulator:
-#    image: mcr.microsoft.com/azure-storage/azurite
-#    volumes:
-#      - "./data/storageBlobs:/data"
-#    ports:
-#      - "10000:10000"
-#      - "10001:10001"
-#    command: ["azurite","--blobHost", "0.0.0.0", "--queueHost", "0.0.0.0", "--loose", "--location", "/data"]
+  storage-emulator:
+    image: mcr.microsoft.com/azure-storage/azurite
+    volumes:
+      - "./data/storageBlobs:/data"
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+    command: ["azurite","--blobHost", "0.0.0.0", "--queueHost", "0.0.0.0", "--loose", "--location", "/data"]
