--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 name: Build & publish container image
 on:
   push:
-    branches: [master]
+    branches: [fix-docker-access]
 jobs:
   build_and_push:
     name: Push Docker image to GitHub Packages
@@ -13,6 +13,8 @@ jobs:
         run: echo ${{ secrets.PRIVATE_TOKEN }} | docker login ghcr.io -u $GITHUB_ACTOR --password-stdin
       - name: Pull latest
         run: docker pull ghcr.io/equinor/ccs-passive
+      - name: get access to decimate image
+        run: echo ${{ secrets.PRIVATE_TOKEN }} | docker login registry.git.equinor.com/sentry/decimate -u ${{ secrets.GITLAB_USERNAME }} --password-stdin
       - name: Build
         run: docker build . --tag ghcr.io/equinor/ccs-passive --cache-from ghcr.io/equinor/ccs-passive
       - name: Push
