--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Pull latest
         run: docker pull ghcr.io/equinor/ccs-passive
       - name: get access to decimate image
-        run: echo ${{ secrets.PRIVATE_TOKEN }} | docker login registry.git.equinor.com/sentry/decimate -u ${{ secrets.GITLAB_USERNAME }} --password-stdin
+        run: echo ${{ secrets.GITLAB_ACCESS_TOKEN }} | docker login registry.git.equinor.com/sentry/decimate -u ${{ secrets.GITLAB_USERNAME }} --password-stdin
       - name: Build
         run: docker build . --tag ghcr.io/equinor/ccs-passive --cache-from ghcr.io/equinor/ccs-passive
       - name: Push
