--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 name: Build & publish container image
 on:
   push:
-    branches: [master]
+    branches: [fix-docker-image-access]
 jobs:
   build_and_push:
     name: Push Docker image to GitHub Packages
