Moved values for conn strings and ENVIRONMENT to .env file. content in .env file needs to be updated when switching between dev and prod

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,8 +7,9 @@ services:
       - "80:5000"
     environment:
       FILES_CONN_STRING: ${FILES_CONN_STRING}
-      BLOB_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;BlobEndpoint=http://storage-emulator:10000/devstoreaccount1;"
-      QUEUE_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;QueueEndpoint=http://storage-emulator:10001/devstoreaccount1;"
+      BLOB_CONN_STRING: ${BLOB_CONN_STRING}
+      QUEUE_CONN_STRING: ${QUEUE_CONN_STRING}
+      ENVIRONMENT: ${ENVIRONMENT}
       RUN_MODE: decimator
     volumes:
       - ./data:/app/data
@@ -20,7 +21,9 @@ services:
     build: .
     environment:
       FILES_CONN_STRING: ${FILES_CONN_STRING}
-      QUEUE_CONN_STRING: "DefaultEndpointsProtocol=http;AccountName=devstoreaccount1;AccountKey=Eby8vdM02xNOcqFlqUwJPLlmEtlCDXJ1OUzFT50uSRZ6IFsuFq2UVErCz4I6tq/K1SZFPTOtr/KBHBeksoGMGw==;QueueEndpoint=http://storage-emulator:10001/devstoreaccount1;"
+      BLOB_CONN_STRING: ${BLOB_CONN_STRING}
+      QUEUE_CONN_STRING: ${QUEUE_CONN_STRING}
+      ENVIRONMENT: ${ENVIRONMENT}
       RUN_MODE: converter
     volumes:
       - ./data:/app/data
