--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,7 +1,7 @@
 name: Build & publish container image
 on:
   push:
-    branches: [master]
+    branches: [update-ci]
 jobs:
   build_and_push:
     name: Push Docker image to GitHub Packages
@@ -19,3 +19,19 @@ jobs:
         run: docker build . --tag ghcr.io/equinor/ccs-passive --cache-from ghcr.io/equinor/ccs-passive
       - name: Push
         run: docker push ghcr.io/equinor/ccs-passive
+
+
+    deploy_master_to_radix:
+      needs: [build_and_push]
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - name: Deploy Master on Radix
+          uses: equinor/radix-github-actions@master
+          with:
+            args: >
+              create job
+              deploy
+              --from-config
+              -e ${{ steps.getEnvironment.outputs.result }}
+              -f
