--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -26,7 +26,7 @@ jobs:
 
 
   deploy_master_to_radix:
-    needs: [build_and_push, testing]
+    needs: [build_and_push]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
