--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -37,5 +37,5 @@ jobs:
             create job
             deploy
             --from-config
-            -e ${{ steps.getEnvironment.outputs.result }}
+            -e ccs-passive
             -f
