add step to deploy to radix (#45)
* add step to deploy to radix

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,9 +2,30 @@ name: Build & publish container image
 on:
   push:
     branches: [master]
+
+env:
+  APP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.K8S_CREDENTIALS }}
+
 jobs:
+  testing:
+    name: Run tests
+    runs-on: ubuntu-20.04
+
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.8.x'
+      - name: "pip install pre-commit and poetry"
+        run: pip install pre-commit poetry
+      - name: Pre-Commit
+        # Until we can build the container (Open Source Decimate), use alternative config file.
+        run: pre-commit run --all-files --verbose -c .pre-commit-config-ci.yaml
+
+
   build_and_push:
     name: Push Docker image to GitHub Packages
+    needs: [testing]
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
@@ -19,3 +40,20 @@ jobs:
         run: docker build . --tag ghcr.io/equinor/ccs-passive --cache-from ghcr.io/equinor/ccs-passive
       - name: Push
         run: docker push ghcr.io/equinor/ccs-passive
+
+
+  deploy_master_to_radix:
+    needs: [build_and_push, testing]
+    name: Deploy to radix
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Deploy Master on Radix
+        uses: equinor/radix-github-actions@master
+        with:
+          args: >
+            create job
+            deploy
+            --from-config
+            -e ccs-passive
+            -f
