--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -43,7 +43,7 @@ jobs:
 
   deploy_master_to_radix:
     name: Deploy to radix
-    needs: [build_and_test, push_docker_image]
+    needs: [build_and_test]
     if: github.ref == 'refs/heads/master'
     runs-on: ubuntu-latest
     steps:
