--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,18 +36,13 @@ repos:
 
 - repo: local
   hooks:
-    - id: build
-      name: Docker Build
-      entry: sh -c "docker-compose build decimator"
-      pass_filenames: false
-      language: system
     - id: unittests
       name: Unit Tests
-      entry: sh -c "docker-compose run decimator pytest -v  --no-header"
+      entry: sh -c "docker-compose -f docker-compose.ci.yaml run decimator pytest -v  --no-header"
       pass_filenames: false
       language: system
     - id: bdd-tests
       name: Behave Tests
-      entry: sh -c "docker-compose run decimator behave --tags=-skip"
+      entry: sh -c "docker-compose -f docker-compose.ci.yaml run decimator behave --tags=-skip"
       language: system
       pass_filenames: false
