--- a/infrastructure/earthworm/earthworm.service
+++ b/infrastructure/earthworm/earthworm.service
@@ -3,8 +3,8 @@ Description=Earthworm auto startstop
 Before=seiscomp.service
 [Service]
 ExecStart=/home/earthworm/ew/earthworm_7.10/bin/startstop
-#Restart=<What to do when service exits, killed, or timed-out   always|no|on-failure>
-#RestartSec=<int seconds>
+Restart=on-failure
+RestartSec=30
 User=earthworm
 Group=earthworm
 Environment=EW_PARAMS=/home/earthworm/ew/earthworm_7.10/run/params/
@@ -16,7 +16,7 @@ Environment=EW_LOG=/home/earthworm/ew/earthworm_7.10/run/log/
 Environment=EW_RUN_DIR=/home/earthworm/ew/earthworm_7.10/run
 Environment=EW_HOME=/home/earthworm/ew/earthworm_7.10
 Environment=EW_INSTALLATION=INST_UNKNOWN
-Environment=PATH=/home/earthworm/ew/earthworm_7.10/bin
+Environment=PATH=/home/earthworm/ew/earthworm_7.10/bin:/usr/bin
 Environment=SYS_NAME=localhost
 StandardOutput=file:/data/ew/logs/startstop.log
 StandardError=file:/data/ew/logs/startstop_error.log
